hphp/test/zend/bad/ext/standard/tests/file/mkdir-005.php
<?php

chdir("/");
var_dump(mkdir("./testdir/subdir", 0777, true));
var_dump(rmdir("./testdir/subdir"));
var_dump(rmdir("./testdir"));

echo "Done\n";
?>